# Clinical-Copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  evaluation_report.csv  main.py  pyproject.toml  ruff.toml
agent/: __init__.py  evaluator_node.py  generator_node.py  graph.py  nodes.py  planner.py  retriever_node.py  state.py  utils.py
alembic/: README  env.py  script.py.mako
app/: __init__.py  main.py
auth/: __init__.py  dependencies.py  jwt.py  oauth.py  schemas.py  security.py  service.py
database/: __init__.py  base.py  crud.py  dependencies.py  models.py  session.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md
evaluation/: __init__.py  dataset.py  evaluator.py  judge.py  metrics.py  report.py
feedback/: __init__.py  analytics.py  comparison.py  crud.py  dependencies.py  export.py  models.py  router.py  schemas.py  service.py
frontend/: admin.html  app.js  index.html  login.html  profile.html  styles.css
ingest/: __init__.py  chunker.py  embeddings.py  generator.py  ingest.py  utils.py
llm/: __init__.py  citation.py  client.py  generator.py  prompts.py  rate_limiter.py
monitoring/: README.md
observability/: __init__.py  dashboards.py  health.py  langsmith.py  logging.py  metrics.py  middleware.py  models.py  request_id.py  telemetry.py  tracing.py
rag/: __init__.py  formatter.py  models.py  retriever.py  search.py
sample_audio/: question.m4a
scripts/: agent_chat.py  chat.py  create_db.py  evaluate.py  export_feedback.py  feedback_summary.py  ingest_data.py  metrics_demo.py  query.py  reset_quotas.py  seed_users.py  stream_demo.py  tool_demo.py  trace_demo.py  usage_report.py  voice_chat.py  websocket_demo.py
security/: __init__.py  analytics.py  budget.py  headers.py  limiter.py  middleware.py  models.py  quota.py  validators.py
streaming/: __init__.py  events.py  manager.py  progress.py  schemas.py  serializers.py  service.py  sse.py  websocket.py
tests/: __init__.py  test_agent.py  test_analytics.py  test_api.py  test_audio.py  test_auth.py  test_budget.py  test_chunker.py  test_citations.py  test_comparison.py  test_database.py  test_deployment.py  test_e2e.py  test_ehr.py  test_evaluator.py  test_events.py  test_export.py  test_feedback.py  test_feedback_api.py  test_formatter.py  test_frontend.py  test_generation.py  test_generator.py  test_graph.py  test_headers.py  test_health.py  test_history.py  test_ingestion.py  test_jwt.py  test_langsmith.py  test_logging.py  test_memory.py  test_metrics.py  test_models.py  test_nodes.py  test_notes.py  test_oauth.py  test_pipeline.py  test_progress.py  test_prompt.py  (+23 more)
tools/: __init__.py  base.py  ehr.py  mock_data.py  models.py  notes.py  registry.py  retry.py  router.py  validator.py  (+1 more)
(+70 files in other folders)
