[project]
name = "clinical-copilot"
version = "0.1.0"
description = "Clinical Copilot is a production-grade AI application backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
    "langchain-groq>=0.2.0",
    "pandas>=2.2.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "groq>=0.11.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "httpx>=0.27.0",
    "email-validator>=2.0.0",
    "httpx2>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app", "ingest", "rag", "llm", "evaluation", "agent", "tools",
    "voice", "database", "auth",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests that require network access to download models",
]
